# embedded-systems

./: MILKV DUO SETUP.md  README.md
HW 1 - Docker Simple Applications/makefile/: Makefile.dockerfile
HW 1/cmake/: CMake.dockerfile
HW 1/makefile/: Makefile.dockerfile
HW 1/python/: Python.dockerfile
HW 2/: CMakeLists.txt  Clibrary.dockerfile  div_int.c  main.c  mult_int.c
HW 2 - Static Libs/C-CPP Arithmetic Program/: cppLib.dockerfile
HW 2 - Static Libs/C-CPP Arithmetic Program/src/: mult_double.cpp
HW 2 - Static Libs/Int Arthimetic with C/: Clibrary.dockerfile  add_int.c
HW 2/C-CPP Arithmetic Program/src/: add_double.cpp
HW 2/Double Arithmetic CPP/: CMakeLists.txt  add_double.cpp  cppLib.dockerfile  div_double.cpp  double_arithmetic.h  int_arithmetic.h  main.cpp  mult_double.cpp  mult_int.c  sub_double.cpp
HW 2/Double Arithmetic CPP/src/: add_int.c  div_int.c  mult_int.c  sub_double.cpp
HW 2/Int Arthimetic with C/: CMakeLists.txt  div_int.c  int_arithmetic.h  main.c  sub_int.c
HW 3 - Shared Library/C-CPP Arithmetic Program/: CMakeLists.txt  cppSLib.dockerfile
HW 3 - Shared Library/C-CPP Arithmetic Program/src/: div_double.cpp
HW 4 - Cross Compiling/Shared Lib/src/: example  hyp.cpp
HW 4 - Cross Compiling/shared_lib/src/: int_arithmetic.h  sub_int.c
HW 4 - Cross Compiling/static_lib/: main.cpp
HW 4 - Cross Compiling/static_lib/src/: double_arithmetic.h  main
HW 5 - Usermode Library/: CMakeLists.txt  main.c
HW 7 - BMP280 Sensor/: CMakeLists.txt  main.c
HW 7 - BMP280 Sensor/bmp_src/: bmp280_i2c.h
HW 7 - BMP280 Sensor/oled_src/: font.h  ssd1306.c  ssd1306.h
Project 2 - MQTT Task Scheduler/: .gitignore  CMakeLists.txt  README.md  subscriber.c  unzip_libs.py
Project 2 - MQTT Task Scheduler/bmp_src/: bmp280_i2c.c
Project 2 - MQTT Task Scheduler/morse_src/: blink.c  blink.h  morse.c
